first draft COMPLETE

--- a/concl.tex
+++ b/concl.tex
@@ -213,47 +213,130 @@ But many worlds that look lovely in science fiction represent places
 we may not actually wish to live, and these portrayals can afford to
 avoid issues of reliability and human interaction that we cannot avoid
 in the real world. There are other choices to be made as we work toward building a
-more automated future. 
-...run together..
-The choice should be between options, between visions, choices of how
-we integrate computers to make our driving safer. The google model,
-this model, the other model, or innumerable newly imagined
-possibilities. NOT a take it or leave it; not the choice of the google
-car or a big fuck you to all the prospective road fatalities. That is
-no choice. There is more on heaven and earth than is dreamt of in this
-philosophy. The real question we need to ask is what form the tech
+more automated future. Our choices should be between options, between
+visions, choices of how we integrate humans and computers to make our
+driving safer, our cities more livable, our lives better. The Google model which has
+captured so much press attention is one among innumerable imagined or
+not-yet-imagined possibilities. Automation is not a
+take-it-or-leave-it phenomenon, and the choice to accept one
+particular model of vehicle automation or accept tens-of-thousands of
+prospective road fatalities is a false choice. There is more on heaven
+and earth than is dreamt of in this philosophy, and it is time we ask
+of autonomy not the na\"{\i}ve questions of whether it will keep us
+safe and improve our cities, but the deep, engaged, and difficult
+questions of how it can be leveraged to achieve such aims. The real
+question we need to ask is what form technologies of vehicle automation 
 should take, and what benefits and acceptable sacrifices adhere to
-that choice.
+that choice. This question is a truly multidisciplinary venture,
+involving engineering, law, policy, design, and ethics. When we
+automate, do we choose to do so with the philosophy of ``do no harm,''
+or ``save more lives''?\footnote{These are deep and subtle questions,
+  but proclaiming them meaningless from an engineering perspective is
+  to miss the importance of ideas to guide technological development,
+  and the social importance of developed technologies. I am grateful
+  to Evan Donahue in particular for a discussion of how the
+  implications of the Hippocratic oath differ from those of a
+  philosophy specifically oriented around saving the greatest number.
+  These two basic premises, extrapolated out to their logical
+  conclusions, may diverge rather than converge, in ways that remind
+  us of the dystopic potential of quantification and optimization,
+  which can lead to solutions that are fundamentally inhumane. It would be foolish
+  to assume that medical systems, themselves a collection of
+  technologies and people, are not affected by this kinds of distinctions.} There may be hidden consequences to these
+philosophies---who is saved? and how? and who bears the cost, or is
+counted out in order to save the greater number?---that come to deeply
+affect how systems engineered from these alter the world.
+%% (Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
+%% lives''?
+%% there may be hidden consequences to a philosophy of saving more lives)
 
-(Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
-lives''?
-there may be hidden consequences to a philosophy of saving more lives)
+The purpose of this thesis has been to sweep away some lazy thinking
+about automated systems, and to try to re-orient a more nuanced dialog
+around different sets of issues. As we think about the future of
+vehicle automation---whether as
+designers, lawmakers, interested technologists or concerned
+citizens---what are the questions we should be asking? What should we
+grapple with instead of accepting common framings of the issues
+involved? To conclude, let me summarize the main open questions around
+which a more productive dialogue about automation could be based.
 
+First, what are the social goals around which automated technology
+should be designed and implemented? The relative importance of safety,
+convenience, mobility, social equality, and other factors must be
+matters of public debate, as they are absolutely central to the
+project of automation.
 
-EDIT THE BELOW
+Second, for any particular design, what are the appropriate roles of
+human and machine in the human-machine system that automated vehicles
+will necessarily be? These roles will not be a pure function of
+technological capabilities, but will involve numerous other factors,
+and will alter the skills that human operators will be expected to
+acquire, and the types of licensing and control that are therefore
+necessary. 
 
-2) wrap up with the big questions we are faced with, that we have to
-grapple with instead of accepting teleology/common media framings: (1
-p)
---1) what is the appropriate role for the human in the human/machine
-system? (1 p) (and what skills do they need to acquire, what licensing
-is necessary?)
---2) what is the appropriate role of statistics and risk in governing
-policy on the issue? can you opt-out? how do we balance projected
-statistical benefits of disparate approaches? (0.5 p)
---3) how safe is safe enough? for whom? and how is this regulated? (1
-p)
------safe for drivers? for pedestrians?
------what types of pedestrians?
---4) how do we feel about AI systems that cannot really be said to
-``think'', ``know'', or ``understand'' but which nevertheless ``hold
-our lives in their hands'' (0.5 p) 
-----and how is this changed by the promise of continued human
-supervision?
-----what types of supervision, on what time scales, are
-socially/legally valuable, valuable enough to be build into our technology?
-----This may well imply we need the human involved, for that very
-reason
-----and we should KEEP the human involved as a matter of design
-principle (2 p)
+Third, as part of this question, how do humans interact with and
+respond to AI systems that cannot simply be said to
+``think'', ``know'', or ``understand'' in the same ways that we do (at
+least not yet) but which nevertheless hold our lives in their hands?
+These concerns may be ameliorated by human involvement and
+supervision. Which means we must consider what types of supervision,
+and on what time scales, are socially or legally valuable, and
+therefore should be built into that technology. 
+
+Fourth, how should we value different automation approaches, or
+estimate their risks, when the technologies involved require complex
+changes to complex systems?  This
+involves balancing the statistical benefits of different automation
+approaches, and coming to conclusions about how to reasonably
+estimate risks, test and certify systems, and set engineering
+priorities based on this information.
+
+Fifth, relatedly, what is the appropriate role of statistics and risk
+projections in governing policy on automated technologies? How safe is
+safe enough, for whom, and how is this
+regulated? Assuming we can come to reasonable predictions about costs
+and benefits, we must close the loop between this information and our
+broader social goals. We need to decide how to weigh uncertainties in
+our evaluation of which goals matter and which are achievable in the
+near term or long term.
+
+%% 2) wrap up with the big questions we are faced with, that we have to
+%% grapple with instead of accepting teleology/common media framings: (1
+%% p)
+%% --1) what is the appropriate role for the human in the human/machine
+%% system? (1 p) (and what skills do they need to acquire, what licensing
+%% is necessary?)
+%% --2) what is the appropriate role of statistics and risk in governing
+%% policy on the issue? can you opt-out? how do we balance projected
+%% statistical benefits of disparate approaches? (0.5 p)
+%% --3) how safe is safe enough? for whom? and how is this regulated? (1
+%% p)
+%% -----safe for drivers? for pedestrians?
+%% -----what types of pedestrians?
+%% --4) how do we feel about AI systems that cannot really be said to
+%% ``think'', ``know'', or ``understand'' but which nevertheless ``hold
+%% our lives in their hands'' (0.5 p) 
+%% ----and how is this changed by the promise of continued human
+%% supervision?
+%% ----what types of supervision, on what time scales, are
+%% socially/legally valuable, valuable enough to be build into our technology?
+%% ----This may well imply we need the human involved, for that very
+%% reason
+%% ----and we should KEEP the human involved as a matter of design
+%% principle (2 p)
+
+These considerations may well imply we need to maintain significant
+human involvement in order to mitigate risk, achieve public
+acceptance, and address the human goals that drive technological
+development. Rather than ``to automate or not to automate,'' we ask
+``how and why do we automate?'' But even in the most automated technologies, their
+autonomy is largely an artifact of the lens through which we engage
+with them---these systems involve delicate dances of human and machine
+components, dispersed through time and space, and only pushed to the
+margins of a point of view that takes the technological object itself,
+not its sociopolitical and cognitive contexts, as the object of study.
+Recognizing that continued human involvement will occur as a matter of principle is
+the most important first step we can take toward rebalancing the
+narrative of automation toward something more productive, which takes
+seriously the technological hybridity of our past, present and future.
 
